First version of a buildable downloader
