# service/downloader/port/http_server.go
@@ -2,11 +2,16 @@
 package port
 
 import (
+	"encoding/json"
 	"net/http"
 
+	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
+	"github.com/go-chi/render"
+	"github.com/kapitan123/telegrofler/common/server/httperr"
 	"github.com/kapitan123/telegrofler/service/downloader/app"
 )
 
+// implements interface generated by openapi spec
 type HttpServer struct {
 	app app.Application
 }
@@ -15,28 +20,34 @@ func NewHttpServer(app app.Application) HttpServer {
 	return HttpServer{app: app}
 }
 
-func (h HttpServer) GetTrainings(w http.ResponseWriter, r *http.Request) {
-	user, err := auth.UserFromCtx(r.Context())
+func (h HttpServer) HandleVideoUrlPublishedMessage(w http.ResponseWriter, r *http.Request) {
+	postMessage := PostPubSubMessage{}
+	if err := render.Decode(r, &postMessage); err != nil {
+		httperr.BadRequest("invalid formt of pubsub message", err, w, r)
+		return
+	}
+
+	var videoMessage VideoUrlPublishedMessage
+	err := json.Unmarshal(postMessage.Data, &videoMessage)
+	if err != nil {
+		httperr.BadRequest("invalid pubsub.Data payload", err, w, r)
+		return
+	}
+
+	err = h.app.SaveVideoToStorage(r.Context(), videoMessage.Url)
+
 	if err != nil {
 		httperr.RespondWithSlugError(err, w, r)
 		return
 	}
 
-	var appTrainings []query.Training
+	render.Status(r, 200)
+}
 
-	if user.Role == "trainer" {
-		appTrainings, err = h.app.Queries.AllTrainings.Handle(r.Context(), query.AllTrainings{})
-	} else {
-		appTrainings, err = h.app.Queries.TrainingsForUser.Handle(r.Context(), query.TrainingsForUser{User: user})
-	}
+func (h HttpServer) GetSavedVideo(w http.ResponseWriter, r *http.Request, videoId openapi_types.UUID) {
+	// AK TODO check if google UUID and openapi_UUID are compitable
+}
 
-	if err != nil {
-		httperr.RespondWithSlugError(err, w, r)
-		return
-	}
-
-	trainings := appTrainingsToResponse(appTrainings)
-	trainingsResp := Trainings{trainings}
-
-	render.Respond(w, r, trainingsResp)
+type VideoUrlPublishedMessage struct {
+	Url string `json:"url"`
 }
